WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194372
[macOS] API test times out after
r241026
https://bugs.webkit.org/show_bug.cgi?id=194372
Summary
[macOS] API test times out after r241026
Per Arne Vollan
Reported
2019-02-06 19:30:39 PST
The API test TestWebKitAPI.RenderingProgress.FirstMeaningfulPaint times out after
r241026
.
Attachments
Patch
(11.20 KB, patch)
2019-02-06 19:38 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2019-02-06 19:38:38 PST
Created
attachment 361371
[details]
Patch
Alex Christensen
Comment 2
2019-02-07 10:14:44 PST
This is unfortunate.
Per Arne Vollan
Comment 3
2019-02-07 10:26:45 PST
Comment on
attachment 361371
[details]
Patch Thanks for reviewing, Alex!
WebKit Commit Bot
Comment 4
2019-02-07 10:53:26 PST
Comment on
attachment 361371
[details]
Patch Clearing flags on attachment: 361371 Committed
r241128
: <
https://trac.webkit.org/changeset/241128
>
WebKit Commit Bot
Comment 5
2019-02-07 10:53:27 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-02-07 10:54:31 PST
<
rdar://problem/47889374
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug